<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    android:orientation="vertical"
    tools:context=".RateAndFeedbackus">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_myhomepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colortoolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/colortitle"
        app:titleMarginStart="20dp">
    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rateusimages" />

    <TextView
        android:id="@+id/txt_your_opinion_matters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_opinion_matters"
        android:fontFamily="cursive"
        android:textColor="@color/colortoolbar"
        android:gravity="center"
        android:textSize="30sp"

        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txt_we_works_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weworkshard"
        android:fontFamily="cursive"
        android:textColor="@color/colortoolbar"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            app:srcCompat="@drawable/first_rate" />

        <ImageView
            android:id="@+id/image_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            app:srcCompat="@drawable/second_rate" />

        <ImageView
            android:id="@+id/image_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            app:srcCompat="@drawable/third_rate" />

        <ImageView
            android:id="@+id/image_fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            app:srcCompat="@drawable/fourth_rate" />

        <ImageView
            android:id="@+id/image_fifth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            app:srcCompat="@drawable/fifth_rate" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/rate_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:numStars="5"
        android:layout_gravity="center"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        />

    <Button
        android:id="@+id/btn_sumbit_to_googleplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_submit"
        android:textSize="20sp"
        android:background="@color/colorforany"
        android:textColor="@color/colortoolbar"
        />

    <TextView
        android:id="@+id/txt_follow_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/followme"
        android:fontFamily="cursive"
        android:textColor="@color/colortoolbar"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/img_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/iconfacebooksocialimage" />

        <ImageView
            android:id="@+id/img_snap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/iconsnapchatsocialimage" />

        <ImageView
            android:id="@+id/img_whats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/iconwhatsappsocialimage" />

        <ImageView
            android:id="@+id/img_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/icontwittersocialimage" />

        <ImageView
            android:id="@+id/img_insta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/iconinstagramsocialimage" />
    </LinearLayout>

</LinearLayout>
</ScrollView>